// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Indexer unit tests Indexer.buildContext() can fetch from the near social api 1`] = `
[
  [
    "https://api.near.social/index",
    {
      "body": "{"action":"post","key":"main","options":{"limit":1,"order":"desc"}}",
      "headers": {
        "Content-Type": "application/json",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`Indexer unit tests Indexer.execute() allows imperative execution of GraphQL operations 1`] = `
[
  [
    "mock-hasura-endpoint/v1/graphql",
    {
      "body": "{"query":"\\n                query {\\n                    posts(where: { id: { _eq: 1 } }) {\\n                        id\\n                    }\\n                }\\n            "}",
      "headers": {
        "Content-Type": "application/json",
        "X-Hasura-Admin-Secret": "mock-hasura-secret",
        "X-Hasura-Role": "buildnear_testnet",
        "X-Hasura-Use-Backend-Only-Permissions": "true",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`Indexer unit tests Indexer.execute() catches errors 1`] = `[]`;

exports[`Indexer unit tests Indexer.execute() should execute all functions against the current block 1`] = `
[
  [
    "mock-hasura-endpoint/v1/graphql",
    {
      "body": "{"query":"mutation { set(functionName: \\"buildnear.testnet/test\\", key: \\"height\\", data: \\"456\\")}"}",
      "headers": {
        "Content-Type": "application/json",
        "X-Hasura-Admin-Secret": "mock-hasura-secret",
        "X-Hasura-Role": "buildnear_testnet",
        "X-Hasura-Use-Backend-Only-Permissions": "true",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`Indexer unit tests Indexer.execute() supplies the required role to the GraphQL endpoint 1`] = `
[
  [
    "mock-hasura-endpoint/v1/graphql",
    {
      "body": "{"query":"mutation { set(functionName: \\"buildnear.testnet/test\\", key: \\"height\\", data: \\"82699904\\")}"}",
      "headers": {
        "Content-Type": "application/json",
        "X-Hasura-Admin-Secret": "mock-hasura-secret",
        "X-Hasura-Role": "morgs_near",
        "X-Hasura-Use-Backend-Only-Permissions": "true",
      },
      "method": "POST",
    },
  ],
]
`;
